--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=AK7451
-version=1.0.0
+version=0.1.0
 author=Colin Butler <colin.0542059@gmail.com>
 maintainer=Colin Butler <colin.0542059@gmail.com>
-sentence=A library that for reading angle from AK7451 sensor.
+sentence=A library for reading angle data from AK7451 sensor.
 paragraph=This IC by Asahi Kasei Microdevices Corporation (AKM) uses a built-in Hall effect element to perform non-contact rotation angle measurements in combination with a diametrically magnetized two pole magenet.
 category=Sensors
-url=http://example.com/
+url=https://github.com/clnbtlr/AK7451-Arduino-library
 architectures=*
