--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
-name=AK7451
-version=0.1.0
+name=ak7451
+version=0.1.1
 author=Colin Butler <colin.0542059@gmail.com>
 maintainer=Colin Butler <colin.0542059@gmail.com>
 sentence=A library for reading angle data from AK7451 sensor.
